ember-bdi/tests/macros/compile-fail/into_literal_union.stderr
error: macros that expand to items must be delimited with braces or followed by a semicolon
 --> tests/macros/compile-fail/into_literal_union.rs:4:10
  |
4 | #[derive(IntoLiteral)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `IntoLiteral` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc-macro derive produced unparsable tokens
 --> tests/macros/compile-fail/into_literal_union.rs:4:10
  |
4 | #[derive(IntoLiteral)]
  |          ^^^^^^^^^^^

error: IntoLiteral cannot be derived for unions
 --> tests/macros/compile-fail/into_literal_union.rs:4:10
  |
4 | #[derive(IntoLiteral)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `IntoLiteral` (in Nightly builds, run with -Z macro-backtrace for more info)
